--- a/src/main/resources/com/example/patientdb/patientlist-view.fxml
+++ b/src/main/resources/com/example/patientdb/patientlist-view.fxml
@@ -7,20 +7,20 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="284.0" prefWidth="361.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="284.0" prefWidth="361.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.patientdb.PatientController">
    <children>
-      <TableView layoutY="52.0" prefHeight="232.0" prefWidth="361.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
+      <TableView fx:id="table" layoutY="52.0" prefHeight="232.0" prefWidth="361.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="Last" />
-            <TableColumn prefWidth="75.0" text="First" />
-            <TableColumn prefWidth="75.0" text="Age" />
+          <TableColumn fx:id="lastclm" prefWidth="75.0" text="Last" />
+            <TableColumn fx:id="firstclm" prefWidth="75.0" text="First" />
+            <TableColumn fx:id="ageclm" prefWidth="75.0" text="Age" />
+            <TableColumn fx:id="cellclm" prefWidth="75.0" text="Cells" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <Button layoutX="304.0" layoutY="12.0" mnemonicParsing="false" text="New" AnchorPane.rightAnchor="12.5" AnchorPane.topAnchor="12.0" />
+      <Button layoutX="304.0" layoutY="12.0" mnemonicParsing="false" onAction="#addFake" text="New" AnchorPane.rightAnchor="12.5" AnchorPane.topAnchor="12.0" />
       <Label layoutX="11.0" layoutY="11.0" text="PatientDB" AnchorPane.leftAnchor="11.0" AnchorPane.topAnchor="11.0">
          <font>
             <Font size="25.0" />
