--- a/src/main/resources/com/example/patientdb/patientlist-view.fxml
+++ b/src/main/resources/com/example/patientdb/patientlist-view.fxml
@@ -20,7 +20,7 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <Button layoutX="304.0" layoutY="12.0" mnemonicParsing="false" onAction="#addFake" text="New" AnchorPane.rightAnchor="12.5" AnchorPane.topAnchor="12.0" />
+      <Button layoutX="304.0" layoutY="12.0" mnemonicParsing="false" onAction="#addPatient" text="New" AnchorPane.rightAnchor="12.5" AnchorPane.topAnchor="12.0" />
       <Label layoutX="11.0" layoutY="11.0" text="PatientDB" AnchorPane.leftAnchor="11.0" AnchorPane.topAnchor="11.0">
          <font>
             <Font size="25.0" />
