--- a/src/main/resources/com/example/patientdb/patienteditor-view.fxml
+++ b/src/main/resources/com/example/patientdb/patienteditor-view.fxml
@@ -1,8 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.patientdb.PatientViewController">
-
+<AnchorPane prefHeight="273.0" prefWidth="274.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.patientdb.PatientViewController">
+   <children>
+      <Label layoutX="67.0" layoutY="28.0" text="Edit Patient">
+         <font>
+            <Font size="26.0" />
+         </font>
+      </Label>
+      <TextField layoutX="54.0" layoutY="79.0" promptText="First Name" />
+      <TextField layoutX="54.0" layoutY="124.0" promptText="Last Name" />
+      <TextField layoutX="54.0" layoutY="168.0" promptText="Age" />
+      <Button layoutX="161.0" layoutY="216.0" mnemonicParsing="false" text="Done" />
+   </children>
 </AnchorPane>
